--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   intl: ^0.19.0
   dropdown_search: ^5.0.6
   flutter_native_splash: ^2.4.1
+  json_serializable: ^6.8.0
+  multi_select_flutter: ^4.1.3
 
 dev_dependencies:
   flutter_test:
