--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_native_splash: ^2.4.1
   json_serializable: ^6.8.0
   multi_select_flutter: ^4.1.3
+  flutter_form_builder: ^9.3.0
 
 dev_dependencies:
   flutter_test:
