--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,32 +13,26 @@ dependencies:
   cupertino_icons: ^1.0.6
   get: ^4.6.6
   get_storage: ^2.1.1
-  connectivity_plus: ^6.0.3
+  connectivity_plus: 6.0.5
   iconsax: ^0.0.8
-  http: ^1.2.1
+  http: 1.2.2
   snippet_coder_utils: ^1.0.15
   intl: ^0.19.0
   dropdown_search: ^5.0.6
   flutter_native_splash: ^2.4.1
   json_serializable: ^6.8.0
   multi_select_flutter: ^4.1.3
-  flutter_form_builder: ^9.3.0
+  flutter_form_builder: 9.4.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^3.0.0
+  flutter_lints: 4.0.0
 
 flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/onbordingimages/
-    - assets/icons/LoginIcons/
-    - assets/LOGOS/
-    - assets/icons/dark/
-    - assets/icons/light/
-    - assets/images/
-    - assets/images/defaultimage/
+
     - assets/images/forsplash/
